# fshg

./: Makefile  README.md  pyproject.toml
fshg/: __init__.py  fshg.py  main.py
